--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -116,6 +116,8 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    justify-content: center;
+    min-height: 200px;
   }
   
   .newsletterTitle {
@@ -174,15 +176,18 @@
   
   .mapWrapper {
     width: 100%;
-    height: 300px;
+    height: auto;
     grid-column: span 2;
+    display: flex;
+    align-items: stretch;
   }
   
   .mapIframe {
     width: 100%;
-    height: 100%;
+    height: 200px;
     border: none;
     border-radius: 0.25rem;
+    min-height: 100%;
   }
   
   .navLinksGrid {
